2007-04-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/_agents/edit.py:
	* gaupol/_agents/open.py:
	* gaupol/_agents/save.py:
	* gaupol/_agents/support.py:
	* gaupol/_agents/text.py:
	* gaupol/base/cons.py:
	* gaupol/base/_mutables.py:
	* gaupol/clipboard.py:
	* gaupol/files/microdvd.py:
	* gaupol/files/mpl2.py:
	* gaupol/files/mpsub.py:
	* gaupol/files/ssa.py:
	* gaupol/files/subrip.py:
	* gaupol/files/subviewer2.py:
	* gaupol/files/tmplayer.py:
	* gaupol/gtk/_actions/__init__.py:
	* gaupol/gtk/_agents/open.py:
	* gaupol/gtk/conf/wrappers.py:
	* gaupol/gtk/dialogs/multiclose.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/lengthlib.py:
	* gaupol/gtk/main.py:
	* gaupol/gtk/view.py:
	* gaupol/liner.py:
	* gaupol/parser.py:
	* gaupol/util.py:
	* tools/translate:
	Replace list(...) with [...] in list comprehensions.

2007-04-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/add-changelog:
	* tools/data/apidocs.css:
	* tools/data/code.css:
	* tools/data/pylintrc:
	* tools/generate-tests:
	* tools/list-glade:
	* tools/nose-run:
	* tools/profile:
	* tools/pydoctor:
	* tools/pylint:
	* tools/translate:
	Minor changes.

2007-03-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol:
	Check if path in sys.path before inserting it.

	* MANIFEST.in:
	Remove doc/api. Include tools/data.

	* setup.py (SDistGna.run):
	Fix this to actually work.

2007-03-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/spellcheck-dialog.glade:
	* data/ui.xml:
	* gaupol/gtk/_actions/spellcheck.py:
	* gaupol/gtk/_agents/spellcheck.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/spellcheck.py:
	Add spell-check.

2007-03-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui.xml:
	* gaupol/gtk/_actions/__init__.py:
	* gaupol/gtk/_actions/spellcheck.py:
	* gaupol/gtk/_agents/__init__.py:
	* gaupol/gtk/_agents/spellcheck.py:
	Add spell-check configuration.

2007-03-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/frconvert-dialog.glade:
	* data/ui.xml: